--- a/manifest.json
+++ b/manifest.json
@@ -1,37 +1,18 @@
 {
-  "name": "Emissions",
-  "version": "0.1.0",
-  "description": "Protecting the world by monitoring digital emissions",
-  "permissions": ["storage", "tabs"],
-  "host_permissions": ["*://*.*.*"],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["*://*.*.*"],
-      "js": ["contentScript.js"]
-    }
-  ],
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "assets/bookmark.png",
-        "assets/play.png",
-        "assets/delete.png",
-        "assets/save.png"
-      ],
-      "matches": ["*://*.*.*"]
-    }
-  ],
-  "action": {
-    "default_icon": {
-      "16": "assets/ext-icon.png",
-      "24": "assets/ext-icon.png",
-      "32": "assets/ext-icon.png"
+    "manifest_version": 2,
+    "name": "Data Usage Calculator",
+    "version": "1.0",
+    "permissions": [
+      "activeTab",
+      "tabs",
+      "storage"
+    ],
+   
+    "background": {
+      "scripts": ["background.js"]
     },
-    "default_title": "Emissions",
-    "default_popup": "popup.html"
-  },
-  "manifest_version": 3
-}
+    "browser_action": {
+      "default_popup": "popup.html",
+      "default_icon": "icon.png"
+    }
+  }
